force-app/main/default/objects/Stock_Transaction__c/Stock_Transaction__c.object-meta.xml
<CustomObject>
    <label>Stock Transaction</label>
    <pluralLabel>Stock Transactions</pluralLabel>
    <nameField>
        <label>Transaction Number</label>
        <displayFormat>STX-{000000}</displayFormat>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
    <description>Immutable audit trail of all warehouse stock movements including inbound, outbound, transfers, and adjustments</description>
</CustomObject>