force-app/main/default/objects/Stock_Transaction__c/fields/Direction__c.field-meta.xml
<CustomField>
    <fullName>Direction__c</fullName>
    <label>Direction</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>In</fullName><default>false</default><label>In</label></value>
            <value><fullName>Out</fullName><default>false</default><label>Out</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>