force-app/main/default/objects/Stock_Transaction__c/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock Transactions</relationshipLabel>
    <relationshipName>Stock_Transactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>