force-app/main/default/objects/Stock_Transaction__c/fields/Product_Ext__c.field-meta.xml
<CustomField>
    <fullName>Product_Ext__c</fullName>
    <label>Product</label>
    <type>Lookup</type>
    <referenceTo>Product_Extension__c</referenceTo>
    <relationshipLabel>Stock Transactions</relationshipLabel>
    <relationshipName>Stock_Transactions_Ext</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>