force-app/main/default/objects/Stock_Transaction__c/fields/Reference_Id__c.field-meta.xml
<CustomField>
    <fullName>Reference_Id__c</fullName>
    <label>Reference ID</label>
    <type>Text</type>
    <length>18</length>
</CustomField>