force-app/main/default/objects/Stock_Transaction__c/fields/Reference_Type__c.field-meta.xml
<CustomField>
    <fullName>Reference_Type__c</fullName>
    <label>Reference Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Invoice</fullName><default>false</default><label>Invoice</label></value>
            <value><fullName>GRN</fullName><default>false</default><label>GRN</label></value>
            <value><fullName>Return_Order</fullName><default>false</default><label>Return_Order</label></value>
            <value><fullName>Stock_Transfer</fullName><default>false</default><label>Stock_Transfer</label></value>
            <value><fullName>Stock_Adjustment</fullName><default>false</default><label>Stock_Adjustment</label></value>
            <value><fullName>Manual</fullName><default>false</default><label>Manual</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>