force-app/main/default/objects/Stock_Transaction__c/fields/Transaction_By__c.field-meta.xml
<CustomField>
    <fullName>Transaction_By__c</fullName>
    <label>Transaction By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Stock Transactions</relationshipLabel>
    <relationshipName>Stock_Transactions_Created</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>