force-app/main/default/objects/Stock_Transaction__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <label>Transaction Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>Inbound_GRN</fullName><default>false</default><label>Inbound_GRN</label></value>
            <value><fullName>Outbound_Dispatch</fullName><default>false</default><label>Outbound_Dispatch</label></value>
            <value><fullName>Reservation</fullName><default>false</default><label>Reservation</label></value>
            <value><fullName>Release_Reservation</fullName><default>false</default><label>Release_Reservation</label></value>
            <value><fullName>Adjustment_Add</fullName><default>false</default><label>Adjustment_Add</label></value>
            <value><fullName>Adjustment_Deduct</fullName><default>false</default><label>Adjustment_Deduct</label></value>
            <value><fullName>Transfer_In</fullName><default>false</default><label>Transfer_In</label></value>
            <value><fullName>Transfer_Out</fullName><default>false</default><label>Transfer_Out</label></value>
            <value><fullName>Return_Inbound</fullName><default>false</default><label>Return_Inbound</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>