force-app/main/default/objects/Stock_Transaction__c/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <label>Warehouse</label>
    <type>Lookup</type>
    <referenceTo>Warehouse__c</referenceTo>
    <relationshipLabel>Stock Transactions</relationshipLabel>
    <relationshipName>Stock_Transactions</relationshipName>
    <deleteConstraint>Restrict</deleteConstraint>
</CustomField>