force-app/main/default/objects/Stock_Transaction__c/fields/Warehouse_Stock__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Stock__c</fullName>
    <label>Warehouse Stock</label>
    <type>Lookup</type>
    <referenceTo>Warehouse_Stock__c</referenceTo>
    <relationshipLabel>Stock Transactions</relationshipLabel>
    <relationshipName>Stock_Transactions</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>