force-app/main/default/objects/Stock_Transaction__c/validationRules/Quantity_Positive.validationRule-meta.xml
<ValidationRule>
    <fullName>Quantity_Positive</fullName>
    <active>true</active>
    <description>Transaction quantity must be positive</description>
    <errorConditionFormula>Quantity__c &lt;= 0</errorConditionFormula>
    <errorMessage>Transaction quantity must be greater than zero.</errorMessage>
</ValidationRule>