force-app/main/default/objects/Stock_Transaction__c/listViews/Recent_Transactions.listView-meta.xml
<ListView>
    <fullName>Recent_Transactions</fullName>
    <label>All</label>
    <filterScope>Everything</filterScope>
    <columns>NAME</columns>
    <columns>Warehouse__c</columns>
    <columns>Product_Ext__c</columns>
    <columns>Transaction_Type__c</columns>
    <columns>Quantity__c</columns>
    <columns>Direction__c</columns>
    <columns>Transaction_Date__c</columns>
</ListView>